--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -5,15 +5,6 @@ html, body {
     height: 100%;
 }
 
-footer {
-    padding-left: 5%;
-    padding-bottom: 0;
-    color: white;
-    background-color: black;
-    height: fit-content;
-    margin-bottom: 0;
-}
-
 #header {
     position: fixed;
     transition: 0.2s;
@@ -29,7 +20,7 @@ footer {
 }
 
 .flexbox1{
-    display:flex
+    display:flex;
     align-items:center;
 }
 
@@ -57,4 +48,37 @@ footer {
     font-weight: bold;
     opacity: 75%;
     width: 100%;
+}
+
+.footer {
+    margin-bottom:0%;
+    width: 100%;
+    Padding: 10% 10%;
+    Background: rgb(0, 0, 0);
+    Color: rgb(255, 255, 255);
+    display: flex;
+}
+.footer div{
+    text-align: center;
+}
+.footer div h3{
+    font-weight: 300px;
+    font-size: 40px;
+    margin-bottom: 0px;
+    letter-spacing: 2px;
+}
+.col1{
+    display:block;
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+.col2{
+    flex-grow: .5;
+}
+form input{
+    width: 350px;
+    height: 30px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
