--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -77,8 +77,11 @@ html, body {
 }
 form input{
     width: 350px;
-    height: 30px;
+    height: 25px;
     text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+form button{
+    background: transparent;
 }
