--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -81,7 +81,24 @@ form input{
     text-align: center;
     margin-top: 5px;
     margin-bottom: 5px;
+    border-radius: 7px;
 }
 form button{
+    width: 100%;
+    height: calc(100% + 5px);
     background: transparent;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+form .cbtn{
+    border: 2px;
+    color:#fdfdfd;
+}
+form button{
+    color:#ffffff;
 }
