--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -85,21 +85,15 @@ form input{
     border-radius: 7px;
 }
 form button{
-    width: 100%;
-    height: calc(100% + 5px);
     background: transparent;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+    border: 2px solid white;
+    color: white;
+    border-radius: 7px;
+    padding: 10px 10px;
+    font-size: 15px;
     cursor: pointer;
-    transition: 0.3s ease;
 }
-form .cbtn{
-    border: 2px;
-    color:#fdfdfd;
-}
-form button{
-    color:#ffffff;
+form button:hover{
+    background-color: #ffffff;
+    color:#000000;
 }
