--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -54,10 +54,10 @@ html, body {
 .footer {
     margin-bottom:0%;
     width: 100%;
-    Padding: 10% 10%;
     Background: rgb(0, 0, 0);
     Color: rgb(255, 255, 255);
     display: flex;
+    align-items: center;
 }
 .footer div{
     text-align: center;
@@ -72,9 +72,14 @@ html, body {
     display:block;
     text-decoration: none;
     margin-bottom: 10px;
+    width: 100%;
 }
 .col2{
     flex-grow: .5;
+    width: 100%;
+}
+.col3{
+    width: 100%;
 }
 form input{
     width: 350px;
