--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -16,7 +16,7 @@ html, body {
 
 .flexbox{
     display:flex;
-    background-color:black;
+    background-color:rgb(0, 0, 0);
     height: 15%;
     width: 100%;
     align-items:center;
@@ -28,10 +28,9 @@ html, body {
 }
 
 .item{
-    color: white;
+    color: rgb(255, 255, 255);
     width: 100%;
     text-align: center;
-    font-weight: bold;
     font-size: 150%;
     text-decoration: none;
 }
@@ -39,7 +38,7 @@ html, body {
 .container {
     position: relative;
     text-align: center;
-    color: black;
+    color: rgb(0, 0, 0);
     padding-top: 6.5%;
 }
 
@@ -98,7 +97,7 @@ form textarea{
 }
 form button{
     background: transparent;
-    border: 2px solid white;
+    border: 2px solid rgb(255, 255, 255);
     color: white;
     border-radius: 7px;
     padding: 10px 10px;
@@ -106,6 +105,6 @@ form button{
     cursor: pointer;
 }
 form button:hover{
-    background-color: #ffffff;
-    color:#000000;
+    background-color: rgb(255, 255, 255);
+    color:rgb(0, 0, 0);
 }
