--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -48,7 +48,6 @@ html, body {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 500%;
-    font-weight: bold;
     opacity: 75%;
     width: 100%;
 }
@@ -80,9 +79,11 @@ html, body {
 .col2{
     flex-grow: .5;
     width: 100%;
+    text-decoration: none;
 }
 .col3{
     width: 100%;
+    text-decoration: none;
 }
 .userInput{
     font-family: Arial, Helvetica, sans-serif;
