--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Merriweather:wght@300&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css");
-html, body {
+html, body, main {
     margin: 0;
     padding: 0;
     width: 100%;
@@ -27,6 +27,12 @@ html, body {
     align-items:center;
 }
 
+.seccion1{
+    background-color: rgb(75 ,30 ,30 );
+    position: relative;
+    padding-top: 10%;
+}
+
 .item{
     color: rgb(255, 255, 255);
     width: 100%;
@@ -39,7 +45,6 @@ html, body {
     position: relative;
     text-align: center;
     color: rgb(0, 0, 0);
-    padding-top: 6.5%;
 }
 
 .centrado {
