--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -22,6 +22,10 @@ html, body, main {
     align-items:center;
 }
 
+.header.tiny {
+    height:10%;
+  }
+
 .flexbox1{
     display:flex;
     align-items:center;
