--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -14,6 +14,10 @@ html, body, main {
     font-family: 'Merriweather', serif;
 }
 
+#reservahover {
+    transition: 0.5s;
+}
+
 .flexbox{
     display:flex;
     background-color:rgb(0, 0, 0);
