--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,21 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Merriweather:wght@300&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css");
-html, body{
+html, body, main{
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-}
-
-main{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-image: url(mila.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 #header {
@@ -135,15 +124,20 @@ form button:hover{
 }
 .containerrflex{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: url(mila.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .containerr{
     width: 350px;
     background: #fff;
     border-radius: 7px;
     text-align: center;
-    padding: 30px 35px 0 35px;
+    padding: 20px 30px 0 30px;
 }
 
 .containerr header{
