--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -18,6 +18,10 @@ html, body, main{
     transition: 0.5s;
 }
 
+#headerhover {
+    transition: 0.5s;
+}
+
 .flexbox{
     display:flex;
     background-color:rgb(0, 0, 0);
