--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -39,6 +39,13 @@ html, body, main{
     align-items:center;
 }
 
+.flexboxm{
+    display:flex;
+    align-items:center;
+    background-color: rgb(120, 20, 30);
+}
+
+
 .seccion1{
     background-color: rgb(75 ,30 ,30 );
     position: relative;
@@ -88,7 +95,7 @@ html, body, main{
 }
 .col1{
     display:block;
-    text-decoration-color: white;
+    text-decoration-color: rgb(255, 255, 255);
     margin-bottom: 10px;
     width: 100%;
 }
@@ -137,7 +144,7 @@ form button:hover{
 }
 .containerr{
     width: 350px;
-    background: #fff;
+    background: rgb(255, 255, 255);
     border-radius: 7px;
     text-align: center;
     padding: 20px 30px 0 30px;
@@ -192,7 +199,7 @@ form button:hover{
 .form-princ form .pagina .campo input{
     width: 100%;
     height: 100%;
-    border: 1px solid lightgrey;
+    border: 1px solid rgb(211, 211, 211);
     border-radius: 5px;
     font-size: 16px;
     padding-left: 15px;
@@ -204,7 +211,7 @@ form button:hover{
     font-size: 17px;
     font-weight: 500;
     border-radius: 5px;
-    border: 1px solid lightgrey;
+    border: 1px solid rgb(211, 211, 211);
 }
 
 .form-princ form .pagina .campo button{
