--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -147,7 +147,7 @@ form button:hover{
     margin: 0;
     padding: 0;
     outline: none;
-    font-family: serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .bodyreserva{
@@ -200,14 +200,15 @@ form button:hover{
     height: 35px;
     width: 330px;
     margin: 35px 0;
+    margin-left: 1%;
     display: flex;
     position: relative;
 }
 
 .form-princ form .pagina .campo .label{
     position: absolute;
-    top: -30px;
-    font-weight: 500;
+    top: -20px;
+    font-weight: 500;   
     font-size: 14px;
     font-style: italic;
     float: left;
